# stmes

./: .clang-format  .clangd  .gitattributes  .gitignore  .vimspector.json  CMakeLists.txt  Makefile  README.md  convert_image.py  encode_image.py  generate_console_font.py  meson.build  platformio.ini  platformio_build_post.py  platformio_build_pre.py  render_fonts.py
.github/workflows/: ci.yml
cmake/: arm_clang_toolchain.cmake  arm_gcc_toolchain.cmake  common_flags.cmake  tools_subproject_wrapper.cmake
cubemx/: platformio.ini  stm32pio.ini  stmes.ioc
cubemx/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
cubemx/Core/Src/: dma.c  gpio.c  main.c  sdio.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c
lib/: .gitignore  CMakeLists.txt  cmsis_core_cm4.wrap  cmsis_device_f4.wrap  stm32_mw_usb_host.wrap  stm32f4xx_hal_driver.wrap
lib/FatFS/: library.json
lib/FatFs/: CMakeLists.txt  library.json  meson.build
lib/FatFs/src/: ff.h
lib/packagefiles/cmsis_core_cm4/: meson.build
lib/packagefiles/cmsis_device_f4/: meson.build
lib/packagefiles/stm32_mw_usb_host/: meson.build
lib/packagefiles/stm32f4xx_hal_driver/: meson.build
lib/printf/: CMakeLists.txt  meson.build  meson_options.txt  printf.h
meson/: cross-arm-clang.txt  cross-arm-gcc.txt  cross-cortex-m4.txt
res/fonts/: 5x8.xcf  README.md
src/: CMakeLists.txt  ffconf.h  link_sections.ld  meson.build  stm32_assert.h  stm32_hal_patches.h  stm32f411ceux.ld  stm32f4xx_hal_conf.h  usbh_conf.h
src/stmes/: CMakeLists.txt  config.h.in  demos.h  dma.c  dma.h  fatfs.c  fatfs.h  gpio.c  gpio.h  interrupts.c  interrupts.h  main.c  main.cc  main.h  math.h  meson.build  newlib_support.c  newlib_support.h  sdio.c  sdio.h  stm32_hal_utils.c  stm32_hal_utils.h  syscalls.c  syscalls.h  timers.c  timers.h  utils.c  utils.h  video_data.c  video_data.h
src/stmes/demos/: CMakeLists.txt  image_viewer.c  mandelbrot.c  meson.build  pong.c  print_tasks.c  sd_card_benchmark.c  terminal.c  text_rendering_benchmark.c  video_player.c
src/stmes/drivers/: CMakeLists.txt  dma.c  dma.h  meson.build  sdmmc.c  sdmmc.h  usb_host.c  usb_host.h
src/stmes/kernel/: CMakeLists.txt  crash.c  crash.h  meson.build  mpu.c  mpu.h  sync.c  sync.h  task.c  task.h  time.c  time.h  unwind.c  unwind.h
src/stmes/video/: CMakeLists.txt  console.c  console.h  console_font.c  console_font.h  framebuf.c  framebuf.h  meson.build  terminal.c  terminal.h  terminal_font.c  terminal_font.h  vga.c  vga.h  vga_color.h
tools/: CMakeLists.txt  generate_console_font.py  generate_terminal_font.py  test_linker_plugin.cc
